# Toy3oh3

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/olshanski/toy3oh3/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp  native-lib.cpp
app/src/main/cpp/engine/: AudioEngine.cpp  AudioEngine.h  CircularBuffer.cpp  CircularBuffer.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  Toy303AudioEngine.cpp  Toy303AudioEngine.h  Toy303Callback.cpp  Toy303Callback.h  Voice.cpp  Voice.h
app/src/main/java/com/olshanski/toy3oh3/: MainActivity.kt  Pad.kt
app/src/main/java/com/olshanski/toy3oh3/adapter/: PadAdapter.kt
app/src/main/res/drawable/: ic_pulse.xml  ic_sawtooth.xml  ic_sine.xml  ic_waveshapes.xml
app/src/main/res/layout/: activity_main.xml  item_pad.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/olshanski/toy3oh3/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
synthesis/: build.gradle
synthesis/src/androidTest/java/com/olshanski/toy3oh3/synthesis/: ExampleInstrumentedTest.kt
synthesis/src/main/: AndroidManifest.xml
synthesis/src/main/cpp/: CMakeLists.txt  synthesis.cpp
synthesis/src/main/cpp/engine/: Envelope.h  EnvelopeListener.h  Oscillator.cpp  Toy303AudioEngine.cpp
synthesis/src/main/java/com/olshanski/toy3oh3/synthesis/: Synthesis.kt
synthesis/src/test/java/com/olshanski/toy3oh3/synthesis/: ExampleUnitTest.kt
